[REF] Move and slightly improve KFAC explanation

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -149,8 +149,9 @@ Ideas:
 \end{ack}
 
 \bibliography{references}
-\bibliographystyle{apalike}
+\bibliographystyle{icml2024.bst}
 
+\clearpage
 \appendix
 
 \input{sections/appendix.tex}
