--- a/paper/references.bib
+++ b/paper/references.bib
@@ -111,3 +111,17 @@
   booktitle =    {International Conference on Learning Representations (ICLR)},
   year =         2018,
 }
+
+@inproceedings{grosse2016kroneckerfactored,
+  author =       {Grosse, Roger and Martens, James},
+  title =        {A Kronecker-Factored Approximate {F}isher Matrix for
+                  Convolution Layers},
+  year =         2016,
+  booktitle =    {International Conference on Machine Learning (ICML)},
+}
+
+@misc{martens2020new,
+  title =        {New insights and perspectives on the natural gradient method},
+  author =       {James Martens},
+  year =         2020,
+}
