--- a/paper/preamble/metadata.tex
+++ b/paper/preamble/metadata.tex
@@ -1,5 +1,5 @@
 \newcommand{\papertitle}{%
-  Kroneckerfactored Approximate Gramian for Energy Natural Gradients in PINNs
+  Kronecker-factored Approximate Gramian for Energy Natural Gradients in PINNs
 }
 \title{\papertitle}
 
