--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -1,3 +1,5 @@
+\clearpage
+
 % Use different numbering in appendix to make it clear that a
 % section/table/algorithm is not in the main text
 \renewcommand\thefigure{\thesection\arabic{figure}}
