--- a/paper/sections/background_engd.tex
+++ b/paper/sections/background_engd.tex
@@ -1,4 +1,4 @@
-\subsection{Energy natural gradients: Definition of the Gramiain / Fisher}
+\subsection{Energy natural gradients}
 
 %\begin{itemize}
 %    \item recently, energy NGs have been proposed
