--- a/paper/sections/background_engd.tex
+++ b/paper/sections/background_engd.tex
@@ -10,14 +10,15 @@
 Natural gradients have been introduced by \citet{amari2000natural} and have shown great success in RL and other problems...
 The general idea is to replace the vanilla GD update rule by a preconditioned version
     \[ \theta_{k+1} = \theta_k - \eta_k G(\theta_k)^{-1} \nabla L(\theta_k), \]
-where $G(\theta)\in\mathbb R^{p\times p}$, $G(\theta)_{ij} \coloneqq g_{u_\theta}(\partial_{\theta_i} u_\theta, \partial_{\theta_j} u_\theta)$ is a matrix capturing the geometry of the function space geometry of the problem and its parametrization.
+where $G(\theta)\in\mathbb R^{p\times p}$, $G(\theta)_{ij} \coloneqq g_{u_\theta}(\partial_{\theta_i} u_\theta, \partial_{\theta_j} u_\theta)$ is a matrix capturing the function space geometry of the problem and its parametrization.
+Classically, $G$ is chosen as the Fisher information matrix, 
+%\begin{equation}
+%    F_I(\theta)_{ij} = \sum_{x} \frac{\partial_{\theta_i}p_\theta(x)\partial_{\theta_j}p_\theta(x)}{p_\theta(x)} = \sum_{x} \partial_{\theta_i} \log p_\theta(x) \partial_{\theta_j} \log p_\theta(x),
+%\end{equation}
+in which case the Riemannian metric $g$ is given by the Fisher-Rao metric~\cite[text]{keylist}. 
 
-In the classic case, $G$ is the Fisher information matrix
-\begin{equation}
-    F_I(\theta)_{ij} = \sum_{x} \frac{\partial_{\theta_i}p_\theta(x)\partial_{\theta_j}p_\theta(x)}{p_\theta(x)} = \sum_{x} \partial_{\theta_i} \log p_\theta(x) \partial_{\theta_j} \log p_\theta(x).
-\end{equation}
-
-In the PINN setting however, our models are functions $u_\theta$ rather than probability measures $p_\theta$ and the loss involves PDE terms.
+In the PINN setting however, the models $u_\theta$ are functions rather than probability measures %$p_\theta$ 
+and the loss involves PDE terms.
 %In order to adjust the definition of
 To capture the geometric properties of this specific problem we consider the following Fisher / Gramian matrix %to this problemThe energy natural gradient is for this example to use the Fischer/Gramian of the form
 \begin{equation*}
@@ -58,7 +59,7 @@ Consider the combined residual map
 \end{equation*}
 Then (with the right choice of the inner product) $L(\theta) = \frac12 \lVert r(\theta) \rVert_2^2$ and hence the Gau\ss-Newton matrix is given by
 \[ Dr(\theta)^\top Dr(\theta) = Dr_\Omega(\theta)^T Dr_\Omega(\theta) + Dr_{\partial\Omega}(\theta)^T Dr_{\partial\Omega}(\theta) = F(\theta). \]
-\todo[inline]{maybe we should also compare to typical GN approaches like CG / Cholesky decomposition? Doesn't sound like much fun though}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../main"
