--- a/paper/sections/kroneckerfactored_approximate_gramian.tex
+++ b/paper/sections/kroneckerfactored_approximate_gramian.tex
@@ -401,7 +401,7 @@ the Gramian $\mF(\mW) = \grad{\mW}\ell (\grad{\mW}\ell)^{\top}$. Consider the fo
       \right]
       \right)
       \,.
-      \intertext{The leading two terms have the same Kronecker structure, $h^{(i-1)} \times h^{(i-1)} \otimes h^{(i)} \times h^{(i)}$.
+      \intertext{The first two terms have the same Kronecker structure, $h^{(i-1)} \times h^{(i-1)} \otimes h^{(i)} \times h^{(i)}$.
       The third term does not simplify further, because the non-identity term in the Jacobians (outer terms) is a matrix, not a vector.
       One way to obtain the same Kronecker structure is to approximate the central term $ \left(\grad{\gradsquared{\vz^{(i-1)}}u}\Delta u \right) \left(\grad{\gradsquared{\vz^{(i-1)}}u}\Delta u \right)^{\top} \approx \mU \otimes \mI$ where $\mU \in \sR^{h^{(i-1)}\times h^{(i-1)}}$ (remember that $\grad{\gradsquared{\vz^{(i-1)}}}u \in \sR^{{h^{(i-1)}}^2}$.
       In the following, let $g := \grad{\gradsquared{\vz^{(i-1)}}}u$ for brevity.
